--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <h1>News</h1>
                 </div>
 
-                <!--- List of news ---!>
+                <!-- List of news -->
                 <div class='row vspace-top-news'>
                     <div class="col-sm-2 news-date">
                         November 2019
@@ -148,7 +148,7 @@
                     <h1>Publications</h1>
                 </div>
 
-                <!--- List of publications ---!>
+                <!-- List of publications -->
                 <div class='row vspace-top'>
                     <div class="col-sm-3">
                         <img src='imgs/SRNs.gif' class='img-fluid'>
