--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     jackw7308 (at) gmail (dot) com
                   </div>
                   <div>
-	            <!-- <a href="">[CV]</a> -->
+	                  <!-- <a href="">[CV]</a> -->
                     <a href="https://github.com/HWANG7308">[GitHub]</a>
                     <!-- <a href="https://scholar.google.com/citations?user=X44QVV4AAAAJ&hl=en&oi=ao">[Google Scholar]</a> -->
                     <a href="https://www.linkedin.com/in/%E7%81%8F-%E7%8E%8B-31a876a2/?locale=en_US">[LinkedIn]</a>
@@ -101,7 +101,8 @@
             <div class='col offset-sm-1'>
                 <h1>Bio</h1>
                 <p>
-                I am a software engineer with experience in signal and image processing, embedded system, machine learning, computer vision, and natural language processing. Currently, I am a postgraduate student in The University of Edinburgh, MSc Informatics. Before moving to the UK, I completed my undergraduate studies in Beijing University of Posts and Telecommunications, B.Eng Telecommunication Engineering. I am an aspiring musician and photographer as well.
+                I am a research intern at the <a href="http://www.cbsr.ia.ac.cn/english/index.asp"></a>Center for Biometrics and Security Research, <a href="http://www.nlpr.ia.ac.cn/en/"></a>National Laboratory of Pattern Recognition, <a href="http://english.ia.cas.cn/"></a>Institute of Automation of the <a href="http://english.cas.cn/"></a>Chinese Academy of Sciences. My research interest lies in 3D Vision and Graphics.
+                <!-- I am a software engineer with experience in signal and image processing, embedded system, machine learning, computer vision, and natural language processing. Currently, I am a postgraduate student in The University of Edinburgh, MSc Informatics. Before moving to the UK, I completed my undergraduate studies in Beijing University of Posts and Telecommunications, B.Eng Telecommunication Engineering. I am an aspiring musician and photographer as well. -->
                 <!-- I am a fourth-year Ph.D. student in the <a href="http://computationalimaging.org">Stanford Computational Imaging Laboratory</a>, advised by Prof. Gordon Wetzstein. My research interest lies in neural scene representations - the way neural networks learn to represent information on our 3D world. My goal is to allow independent agents to reason about our world given visual observations, such as inferring a complete model of a scene with information on geometry, material, lighting etc. from only few observations, a task that is simple for humans, but currently impossible for AI. I have previously worked on differentiable camera pipelines, VR and human perception. -->
                 </p>
 
@@ -116,33 +117,9 @@
                     </div>
 
                     <div class="col">
-		    	Our paper "Scene Representation Networks: Continuous 3D-Structure-Aware Neural Scene Representations" wins an honorable mention for "Outstanding New Directions" at NeurIPS 2019! Watch my talk <a href="https://slideslive.com/38921749/track-1-session-3">here</a>.
+		    	            Our paper "Scene Representation Networks: Continuous 3D-Structure-Aware Neural Scene Representations" wins an honorable mention for "Outstanding New Directions" at NeurIPS 2019! Watch my talk <a href="https://slideslive.com/38921749/track-1-session-3">here</a>.
                     </div>
                 </div>
-
-
-                <div class='row vspace-top-news'>
-                    <div class="col-sm-2 news-date">
-                        May 2019
-                    </div>
-
-                    <div class="col">
-                        I will join Prof. Noah Snavely's group at the Google NYC office over the summer and continue working
-                        on  deep learning for scene understanding and novel view synthesis.
-                    </div>
-                </div>
-
-                <div class='row vspace-top-news'>
-                    <div class="col-sm-2 news-date">
-                        March 2019
-                    </div>
-
-                    <div class="col">
-                        Our paper "DeepVoxels: Learning Persistent 3D Feature Embeddings" was accepted to CVPR as an oral!
-                        I will be in Los Angeles from June 16 to June 21 to present the paper.
-                    </div>
-                </div>
-
 
                 <div class='vspace-top'>
                     <h1>Publications</h1>
@@ -151,158 +128,24 @@
                 <!-- List of publications -->
                 <div class='row vspace-top'>
                     <div class="col-sm-3">
-                        <img src='imgs/SRNs.gif' class='img-fluid'>
+                      <img src='imgs/SRNs.gif' class='img-fluid'>
                     </div>
 
                     <div class="col">
                         <div class='paper-title'>
-                            Scene Representation Networks: Continuous 3D-Structure-Aware Neural Scene Representations
+                          Scene Representation Networks: Continuous 3D-Structure-Aware Neural Scene Representations
                         </div>
                         <div class='paper-desc'>
-			    NeurIPS 2019 (Oral, <b>Honorable Mention "Outstanding New Directions"</b>)
+			                    NeurIPS 2019 (Oral, <b>Honorable Mention "Outstanding New Directions"</b>)
                         </div>
                         <div class='paper-authors'>
-                            <u>Vincent Sitzmann</u>, Michael Zollhöfer, Gordon Wetzstein
+                          <u>Vincent Sitzmann</u>, Michael Zollhöfer, Gordon Wetzstein
                         </div>
                         <div>
-                            <a href="http://vsitzmann.github.io/srns/">[Project page]</a>
-                            <a href="http://arxiv.org/abs/1906.01618">[Preprint]</a>
-			    <a href="https://github.com/vsitzmann/scene-representation-networks">[Code]</a>
+                          <a href="http://vsitzmann.github.io/srns/">[Project page]</a>
+                          <a href="http://arxiv.org/abs/1906.01618">[Preprint]</a>
+			                    <a href="https://github.com/vsitzmann/scene-representation-networks">[Code]</a>
                         </div>
-                    </div>
-                </div>
-
-
-                <div class='row vspace-top'>
-                    <div class="col-sm-3">
-                        <img src='imgs/deepvoxels.png' class='img-fluid'>
-                    </div>
-
-                    <div class="col">
-                      <div class='paper-title'>
-                          DeepVoxels: Learning Persistent 3D Feature Embeddings
-                      </div>
-                      <div class='paper-desc'>
-		      CVPR 2019 (Oral)
-                      </div>
-                      <div class='paper-authors'>
-                      <u>Vincent Sitzmann</u>, Justus Thies, Felix Heide, Matthias Nießner, Gordon Wetzstein, Michael Zollhöfer
-                      </div>
-                      <div>
-                         <a href="http://vsitzmann.github.io/deepvoxels/">[Project page]</a>
-                         <a href="https://arxiv.org/abs/1812.01024">[Paper]</a>
-                         <a href="https://github.com/vsitzmann/deepvoxels">[Code]</a>
-                      </div>
-                    </div>
-                </div>
-
-
-                <div class='row vspace-top'>
-                    <div class="col-sm-3">
-                        <img src='imgs/onn_thumbnail.jpg' class='img-fluid'>
-                    </div>
-
-                    <div class="col">
-                      <div class='paper-title'>
-                          Hybrid optical-electronic convolutional neural networks with optimized diffractive optics for image classification
-                      </div>
-                      <div class='paper-desc'>
-                        Scientific Reports
-                      </div>
-                      <div class='paper-authors'>
-                      Julie Chang, <u>Vincent Sitzmann</u>, Xiong Dun, Wolfgang Heidrich, Gordon Wetzstein
-                      </div>
-                      <div>
-                        <a href="https://www.nature.com/articles/s41598-018-30619-y">[Paper]</a>
-                      </div>
-                    </div>
-                </div>
-
-                <div class='row vspace-top'>
-                    <div class="col-sm-3">
-                        <img src='imgs/end-to-end-cam.jpg' class='img-fluid'>
-                    </div>
-
-                    <div class="col">
-                      <div class='paper-title'>
-                          End-to-end Optimization of Optics and Image Processing for Achromatic Extended Depth of Field and Super-resolution Imaging
-                      </div>
-                      <div class='paper-desc'>
-                          SIGGRAPH 2018
-                      </div>
-                      <div class='paper-authors'>
-                          <u>Vincent Sitzmann*</u>, Steven Diamond*, Yifan Peng*, Xiong Dun, Stephen Boyd, Wolfgang Heidrich, Felix Heide, Gordon Wetzstein
-                      </div>
-                      <div>
-                         <a href="https://vsitzmann.github.io/deepoptics/">[Project page]</a>
-                         <a href="https://drive.google.com/file/d/1Xums2qyqSGP_z_24HnYpM9gbRm1_uAzY/view?usp=sharing">[Paper]</a>
-                         <a href="https://github.com/vsitzmann/deepoptics">[Code]</a>
-                      </div>
-                    </div>
-                </div>
-
-                <div class='row vspace-top'>
-                    <div class="col-sm-3">
-                        <img src='imgs/saliency.jpg' class='img-fluid'>
-                    </div>
-
-                    <div class="col">
-                      <div class='paper-title'>
-                        Saliency in VR: How do people explore virtual environments?
-                      </div>
-                      <div class='paper-desc'>
-                        IEEE VR 2018
-                      </div>
-                      <div class='paper-authors'>
-                          <u>Vincent Sitzmann*</u>, Ana Serrano*, Amy Pavel, Maneesh Agrawala, Belen Masia, Diego Gutierrez, Gordon Wetzstein
-                      </div>
-                      <div>
-                        <a href="https://vsitzmann.github.io/vr-saliency">[Project page]</a>
-                        <a href="http://ieeexplore.ieee.org/document/8269807/">[Paper]</a>
-                        <a href="https://www.github.com/vsitzmann/vr-saliency">[Code]</a>
-                      </div>
-                    </div>
-                </div>
-
-                <div class='row vspace-top'>
-                    <div class="col-sm-3">
-                        <img src='imgs/cognitive_events.jpg' class='img-fluid'>
-                    </div>
-
-                    <div class="col">
-                      <div class='paper-title'>
-                          Movie Editing and Cognitive Event Segmentation in Virtual Reality Video
-                      </div>
-                      <div class='paper-desc'>
-                          SIGGRAPH 2017
-                      </div>
-                      <div class='paper-authors'>
-                          Ana Serrano, <u>Vincent Sitzmann</u>, Jaime Ruiz-Borau, Gordon Wetzstein, Diego Gutierrez, Belen Masia
-                      </div>
-                      <div>
-                        <a href="http://webdiis.unizar.es/~aserrano/docs/Serrano_SIGG2017_VR-cine.pdf">[Paper]</a>
-                      </div>
-                    </div>
-                </div>
-
-                <div class='row vspace-top'>
-                    <div class="col-sm-3">
-                        <img src='imgs/sickness_prediction.jpg' class='img-fluid'>
-                    </div>
-
-                    <div class="col">
-                      <div class='paper-title'>
-                          Towards a Machine-learning Approach for Sickness Prediction in 360° Stereoscopic Videos
-                      </div>
-                      <div class='paper-desc'>
-                          IEEE VR 2018
-                      </div>
-                      <div class='paper-authors'>
-                          Nitish Padmanaban*, Timon Ruban*, <u>Vincent Sitzmann</u>, Anthony M. Norcia, Gordon Wetzstein
-                      </div>
-                      <div>
-                        <a href="http://ieeexplore.ieee.org/document/8267239/">[Paper]</a>
-                      </div>
                     </div>
                 </div>
             </div>
