--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <!-- I am a fourth-year Ph.D. student in the <a href="http://computationalimaging.org">Stanford Computational Imaging Laboratory</a>, advised by Prof. Gordon Wetzstein. My research interest lies in neural scene representations - the way neural networks learn to represent information on our 3D world. My goal is to allow independent agents to reason about our world given visual observations, such as inferring a complete model of a scene with information on geometry, material, lighting etc. from only few observations, a task that is simple for humans, but currently impossible for AI. I have previously worked on differentiable camera pipelines, VR and human perception. -->
                 </p>
 
-                <div class='vspace-top'>
+                <!-- <div class='vspace-top'>
                     <h1>News</h1>
                 </div>
 
@@ -147,7 +147,7 @@
 			                    <a href="https://github.com/vsitzmann/scene-representation-networks">[Code]</a>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
