--- a/index.html
+++ b/index.html
@@ -106,26 +106,38 @@
                 <!-- I am a fourth-year Ph.D. student in the <a href="http://computationalimaging.org">Stanford Computational Imaging Laboratory</a>, advised by Prof. Gordon Wetzstein. My research interest lies in neural scene representations - the way neural networks learn to represent information on our 3D world. My goal is to allow independent agents to reason about our world given visual observations, such as inferring a complete model of a scene with information on geometry, material, lighting etc. from only few observations, a task that is simple for humans, but currently impossible for AI. I have previously worked on differentiable camera pipelines, VR and human perception. -->
                 </p>
 
-                <!-- <div class='vspace-top'>
+                <div class='vspace-top'>
                     <h1>News</h1>
                 </div>
 
                 <!-- List of news -->
                 <div class='row vspace-top-news'>
+                  <div class="col-sm-2 news-date">
+                    November 2019
+                  </div>
+                
+                  <div class="col">
+                    I obtained MSc with Distinction in <a href="www.ed.ac.uk/pg/111">Informatics</a> from The University of Edinburgh.
+                  </div>
+                </div>
+
+                <div class='row vspace-top-news'>
                     <div class="col-sm-2 news-date">
-                        November 2019
+                        October 2019
                     </div>
 
                     <div class="col">
-		    	            Our paper "Scene Representation Networks: Continuous 3D-Structure-Aware Neural Scene Representations" wins an honorable mention for "Outstanding New Directions" at NeurIPS 2019! Watch my talk <a href="https://slideslive.com/38921749/track-1-session-3">here</a>.
+		    	            I joined <a href="http://www.cbsr.ia.ac.cn/users/xiangyuzhu/">Prof. Xiangyu Zhu</a>'s group at Center for Biometrics and Security Research, National Laboratory of Pattern Recognition, Institute of Automation of the Chinese Academy of Sciences, and work on 3D face reconstruction.
                     </div>
                 </div>
 
-                <div class='vspace-top'>
+                <!--<div class='vspace-top'>
                     <h1>Publications</h1>
                 </div>
+                -->
 
                 <!-- List of publications -->
+                <!--
                 <div class='row vspace-top'>
                     <div class="col-sm-3">
                       <img src='imgs/SRNs.gif' class='img-fluid'>
@@ -147,7 +159,8 @@
 			                    <a href="https://github.com/vsitzmann/scene-representation-networks">[Code]</a>
                         </div>
                     </div>
-                </div> -->
+                </div>
+                -->
             </div>
         </div>
     </div>
