--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                   </div>
                 
                   <div class="col">
-                    I obtained MSc with Distinction in <a href="www.ed.ac.uk/pg/111">Informatics</a> from The University of Edinburgh.
+                    I obtained MSc with Distinction in <a href="https://www.ed.ac.uk/files/atoms/files/pgb-informatics-2018.pdf#page=5">Informatics</a> from The University of Edinburgh.
                   </div>
                 </div>
 
