--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     jackw7308 (at) gmail (dot) com
                   </div>
                   <div>
-	                  <a href="https://github.com/HWANG7308/hwang7308.github.io/blob/master/docs/CV-Hao-Wang.pdf">[CV]</a>
+	                  <a href="https://hwang7308.github.io/docs/CV-Hao-Wang.pdf">[CV]</a>
                     <a href="https://github.com/HWANG7308">[GitHub]</a>
                     <!-- <a href="https://scholar.google.com/citations?user=X44QVV4AAAAJ&hl=en&oi=ao">[Google Scholar]</a> -->
                     <a href="https://www.linkedin.com/in/%E7%81%8F-%E7%8E%8B-31a876a2/?locale=en_US">[LinkedIn]</a>
