--- a/index.html
+++ b/index.html
@@ -117,17 +117,17 @@
                   </div>
                 
                   <div class="col">
-                    I obtained MSc with Distinction in <a href="https://www.ed.ac.uk/files/atoms/files/pgb-informatics-2018.pdf#page=5">Informatics</a> from The University of Edinburgh.
+                    I obtained MSc with Distinction in <a href="https://www.ed.ac.uk/files/atoms/files/pgb-informatics-2018.pdf#page=5">Informatics</a> from <a href="https://www.ed.ac.uk/">The University of Edinburgh</a>.
                   </div>
                 </div>
 
                 <div class='row vspace-top-news'>
                     <div class="col-sm-2 news-date">
-                        October 2019
+                      October 2019
                     </div>
 
                     <div class="col">
-		    	            I joined <a href="http://www.cbsr.ia.ac.cn/users/xiangyuzhu/">Prof. Xiangyu Zhu</a>'s group at Center for Biometrics and Security Research, National Laboratory of Pattern Recognition, Institute of Automation of the Chinese Academy of Sciences, and work on 3D face reconstruction.
+                      I joined <a href="http://www.cbsr.ia.ac.cn/users/xiangyuzhu/">Prof. Xiangyu Zhu</a>'s group at Center for Biometrics and Security Research, National Laboratory of Pattern Recognition, Institute of Automation of the Chinese Academy of Sciences, and work on 3D face reconstruction.
                     </div>
                 </div>
 
