--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                   </div>
                 
                   <div class="col">
-                    I received my MSc with Distinction in <a href="https://www.ed.ac.uk/files/atoms/files/pgb-informatics-2018.pdf#page=5">Informatics</a> from <a href="https://www.ed.ac.uk/">The University of Edinburgh</a>, supervised by Prof. <a href="http://homepages.inf.ed.ac.uk/rbf/">Bob Fisher</a>.
+                    I received my MSc with Distinction in <a href="https://www.ed.ac.uk/files/atoms/files/pgb-informatics-2018.pdf#page=5">Informatics</a> from <a href="https://www.ed.ac.uk/">The University of Edinburgh</a>, supervised by <a href="http://homepages.inf.ed.ac.uk/rbf/">Prof. Bob Fisher</a>.
                   </div>
                 </div>
 
