--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
                 </p>
 
                 <div class='vspace-top'>
-                    <h1>News</h1>
+                    <h1>Updates</h1>
                 </div>
 
-                <!-- List of news -->
+                <!-- List of updates -->
                 <div class='row vspace-top-news'>
                   <div class="col-sm-2 news-date">
                     November 2019
