--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
           #header-text-name {
             font-size: 40px;
           }
+	  #header-text-status {
+            font-size: 20px;
+          }
           #header-text-email {
             font-size: 20px;
             font-style: italic;
@@ -79,17 +82,19 @@
                   <div id='header-text-name'>
                       Hao Wang
                   </div>
+		  <div id='header-text-status'>
+                      Research Intern at Chinese Academy of Sciences
+                  </div>
                   <div id='header-text-email'>
-                    jackw7308 (at) gmail (dot) com
+                      jackw7308 (at) gmail (dot) com
                   </div>
                   <div>
-	                  <a href="https://hwang7308.github.io/docs/CV-Hao-Wang.pdf">[CV]</a>
+		    <!-- <a href="https://scholar.google.com/citations?user=X44QVV4AAAAJ&hl=en&oi=ao">[Google Scholar]</a> -->
                     <a href="https://github.com/HWANG7308">[GitHub]</a>
-                    <!-- <a href="https://scholar.google.com/citations?user=X44QVV4AAAAJ&hl=en&oi=ao">[Google Scholar]</a> -->
                     <a href="https://www.linkedin.com/in/%E7%81%8F-%E7%8E%8B-31a876a2/?locale=en_US">[LinkedIn]</a>
                     <!-- <a href="https://twitter.com/vincesitzmann">[Twitter]</a> -->
+	            <a href="https://hwang7308.github.io/docs/CV-Hao-Wang.pdf">[CV]</a>
                   </div>
-
                 </div>
             </div>
         </div>
@@ -101,7 +106,13 @@
             <div class='col offset-sm-1'>
                 <h1>Bio</h1>
                 <p>
-                I am a research intern at the <a href="http://www.cbsr.ia.ac.cn/english/index.asp">Center for Biometrics and Security Research</a>, <a href="http://www.nlpr.ia.ac.cn/en/">National Laboratory of Pattern Recognition</a>, <a href="http://english.ia.cas.cn/">Institute of Automation</a> of the <a href="http://english.cas.cn/">Chinese Academy of Sciences</a>. My research interests are in 3D Vision and Graphics. I have background in signal and image processing, embedded system, machine learning, computer vision, and natural language processing. I am also an aspiring musician and <a href="https://www.instagram.com/_1wanghao1_/">photographer</a>.
+                I am currently a research intern at the <a href="http://www.cbsr.ia.ac.cn/">Center for Biometrics and Security Research</a>, <a href="http://www.nlpr.ia.ac.cn/cn/index.html">National Laboratory of Pattern Recognition</a>, <a href="http://www.ia.cas.cn/">Institute of Automation</a> of the <a href="http://www.cas.cn/">Chinese Academy of Sciences</a>. 
+		
+		My research interests are in 3D Vision and Graphics.
+		
+		I have background in signal and image processing, embedded system, machine learning, computer vision, and natural language processing. In 2019, I received my MSc with Distinction in <a href="https://www.ed.ac.uk/files/atoms/files/pgb-informatics-2018.pdf#page=5">Informatics</a> from <a href="https://www.ed.ac.uk/">The University of Edinburgh</a>, supervised by <a href="http://homepages.inf.ed.ac.uk/rbf/">Prof. Bob Fisher</a>. In 2018, I received my B.Eng. in Telecommunication Engineering from <a href="https://www.bupt.edu.cn/">Beijing University of Posts and Telecommunications</a>.
+		
+		I am also an aspiring musician and <a href="https://www.instagram.com/_1wanghao1_/">photographer</a>.
                 <!-- I am a software engineer with experience in signal and image processing, embedded system, machine learning, computer vision, and natural language processing. Currently, I am a postgraduate student in The University of Edinburgh, MSc Informatics. Before moving to the UK, I completed my undergraduate studies in Beijing University of Posts and Telecommunications, B.Eng Telecommunication Engineering. I am an aspiring musician and photographer as well. -->
                 <!-- I am a fourth-year Ph.D. student in the <a href="http://computationalimaging.org">Stanford Computational Imaging Laboratory</a>, advised by Prof. Gordon Wetzstein. My research interest lies in neural scene representations - the way neural networks learn to represent information on our 3D world. My goal is to allow independent agents to reason about our world given visual observations, such as inferring a complete model of a scene with information on geometry, material, lighting etc. from only few observations, a task that is simple for humans, but currently impossible for AI. I have previously worked on differentiable camera pipelines, VR and human perception. -->
                 </p>
@@ -117,7 +128,7 @@
                   </div>
                 
                   <div class="col">
-                    I received my MSc with Distinction in <a href="https://www.ed.ac.uk/files/atoms/files/pgb-informatics-2018.pdf#page=5">Informatics</a> from <a href="https://www.ed.ac.uk/">The University of Edinburgh</a>, supervised by <a href="http://homepages.inf.ed.ac.uk/rbf/">Prof. Bob Fisher</a>.
+                    I received my MSc with Distinction in Informatics!
                   </div>
                 </div>
 
