--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                       Hao Wang
                   </div>
 		  <div id='header-text-status'>
-                      Research Intern
+                      Research Intern <br />
 		      <a href="http://www.cbsr.ia.ac.cn/">Center for Biometrics and Security Research</a> & <a href="http://www.nlpr.ia.ac.cn/cn/index.html">National Laboratory of Pattern Recognition</a> <br />
 		      <a href="http://www.ia.cas.cn/">Institute of Automation</a> <br />
 	              <a href="http://www.cas.cn/">Chinese Academy of Sciences</a> <br />
