--- a/index.html
+++ b/index.html
@@ -142,6 +142,16 @@
                       I joined <a href="http://www.cbsr.ia.ac.cn/users/xiangyuzhu/">Prof. Xiangyu Zhu</a>'s group at Center for Biometrics and Security Research, National Laboratory of Pattern Recognition, Institute of Automation of the Chinese Academy of Sciences, and work on 3D face reconstruction.
                     </div>
                 </div>
+		    
+		<div class='row vspace-top-news'>
+                    <div class="col-sm-2 news-date">
+                      September 2018
+                    </div>
+
+                    <div class="col">
+                      I started my MSc Informatics at the University of Edinburgh!
+                    </div>
+                </div>
 
                 <!--<div class='vspace-top'>
                     <h1>Publications</h1>
@@ -179,7 +189,8 @@
 
 
     <div id='footer' class='vspace-top'>
-    <div>
+      Hi!
+    </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
