--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
 
     <div id='footer' class='vspace-top'>
-      Hi!
+      <center> Last Update -  Nov. 2019 </center>
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
