--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             padding-bottom:60px;
           }
           #footer {
-            background-color: #FFFFFF;
+            background-color: #F4F4F4;
             padding:60px;
           }
           #portrait {
@@ -123,6 +123,7 @@
                 </div>
 
                 <!-- List of updates -->
+		<div style="overflow:auto; height:50px;">
                 <div class='row vspace-top-news'>
                   <div class="col-sm-2 news-date">
                     November 2019
@@ -152,6 +153,7 @@
                       I started my MSc Informatics at the University of Edinburgh!
                     </div>
                 </div>
+	        </div>
 
                 <!--<div class='vspace-top'>
                     <h1>Publications</h1>
