--- a/index.html
+++ b/index.html
@@ -154,6 +154,41 @@
                     </div>
                 </div>
 	        </div>
+		    
+		<div class='vspace-top'>
+                    <h1>Research Highlights</h1>
+                </div>
+
+                <!-- List of research projects -->
+                <div class='row vspace-top'>
+                    <div class="col-sm-3">
+                      <!--<img src='imgs/SRNs.gif' class='img-fluid'>-->
+                    </div>
+
+                    <div class="col">
+                        <div class='paper-title'>
+                          Gender Identification from 3D Facial Surface Model
+                        </div>
+                        <div class='paper-desc'>
+			  Dissertation for Master’s degree
+                        </div>
+                    </div>
+                </div>
+		    
+		<div class='row vspace-top'>
+                    <div class="col-sm-3">
+                      <!--<img src='imgs/SRNs.gif' class='img-fluid'>-->
+                    </div>
+
+                    <div class="col">
+                        <div class='paper-title'>
+                          Realization of Image Super-Resolution by Implementing Convolutional Neural Network on Sub-pixel
+                        </div>
+                        <div class='paper-desc'>
+			  Dissertation for Bachelor’s degree
+                        </div>
+                    </div>
+                </div>
 
                 <!--<div class='vspace-top'>
                     <h1>Publications</h1>
