--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 <!-- List of research projects -->
                 <div class='row vspace-top'>
                     <div class="col-sm-3">
-                      <!--<img src='imgs/SRNs.gif' class='img-fluid'>-->
+                      <img src='imgs/MSc.png' class='img-fluid'>
                     </div>
 
                     <div class="col">
@@ -177,7 +177,7 @@
 		    
 		<div class='row vspace-top'>
                     <div class="col-sm-3">
-                      <!--<img src='imgs/SRNs.gif' class='img-fluid'>-->
+                      <img src='imgs/BEng.png' class='img-fluid'>
                     </div>
 
                     <div class="col">
