--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 			  </div>
 
 			  <div class="col">
-			    I received my MSc with Distinction in Informatics!
+			    Receive my MSc with Distinction in Informatics!
 			  </div>
 			</div>
 
@@ -140,7 +140,7 @@
 			    </div>
 
 			    <div class="col">
-			      I joined <a href="http://www.cbsr.ia.ac.cn/users/xiangyuzhu/">Prof. Xiangyu Zhu</a>'s group at Center for Biometrics and Security Research, National Laboratory of Pattern Recognition, Institute of Automation of the Chinese Academy of Sciences, and work on 3D face reconstruction.
+			      I will join <a href="http://www.cbsr.ia.ac.cn/users/xiangyuzhu/">Prof. Xiangyu Zhu</a>'s group at Center for Biometrics and Security Research, National Laboratory of Pattern Recognition, Institute of Automation of the Chinese Academy of Sciences, and work on 3D face reconstruction.
 			    </div>
 			</div>
 
@@ -150,7 +150,7 @@
 			    </div>
 
 			    <div class="col">
-			      I started my MSc in Informatics at the University of Edinburgh!
+			      Start my MSc in Informatics at the University of Edinburgh!
 			    </div>
 			</div>
 
@@ -160,7 +160,7 @@
 			    </div>
 
 			    <div class="col">
-			      I received my B.Eng in Telecommunication Engineering!
+			      Receive my B.Eng in Telecommunication Engineering!
 			    </div>
 			</div>
 			
@@ -170,7 +170,7 @@
 			    </div>
 
 			    <div class="col">
-			      I started my uni life at Beijing University of Posts and Telecommunications!
+			      Start my uni life at Beijing University of Posts and Telecommunications!
 			    </div>
 			</div>
 	        </div>
