--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
     <title>Hao Wang</title>
@@ -8,6 +9,9 @@
 
     <!-- Bootstrap CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+	
+    <!-- Page icon -->
+    <link rel="icon" type="image/png" href="/imgs/icon.png">
 
     <!-- Custom Styles -->
     <style>
