--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 	
     <!-- Page icon -->
-    <link rel="icon" type="image/png" href="/imgs/icon.png">
+    <!--<link rel="icon" type="image/png" href="/imgs/icon.png">-->
+    <link rel="icon" href="imgs/icon.png" type="image/x-icon"/>
 
     <!-- Custom Styles -->
     <style>
