--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	
     <!-- Page icon -->
     <!--<link rel="icon" type="image/png" href="/imgs/icon.png">-->
-    <link rel="icon" href="imgs/icon.png" type="image/x-icon"/>
+    <link href="imgs/icon.png" rel="icon" type="image/x-icon"/>
 
     <!-- Custom Styles -->
     <style>
