--- a/index.html
+++ b/index.html
@@ -245,13 +245,17 @@
                     </div>
                 </div>
                 -->
+		
+		
+		    
             </div>
         </div>
     </div>
 
 
     <div id='footer' class='vspace-top'>
-      <center> Last Update -  Dec. 2019 </center>
+      <center> Last Update - Dec. 2019 </center>
+      <center> &copy; 2019 Hao Wang </center>
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
