--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 			    </div>
 
 			    <div class="col">
-			      Start my MSc in Informatics at the University of Edinburgh!
+			      Start my MSc in Informatics at The University of Edinburgh!
 			    </div>
 			</div>
 
