--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 
 
     <div id='footer' class='vspace-top'>
-      <center><p id="ymd"></p>
+      <center><p id="ymd" &copy; 2019 Hao Wang></p>
 	    <script>
 		var date = new Date()<!--获得日期数据-->
 		var y = date.getFullYear();<!--年-->
