--- a/index.html
+++ b/index.html
@@ -260,10 +260,9 @@
 		var y = date.getFullYear();<!--年-->
 		var m = date.getMonth()+1;<!--月，这里的月份必须要+1才是当前月份-->
 		var d = date.getDate(); <!--日，getDay是获得当前星期几（0-6），getDate是获得当前日期-->
-		document.getElementById("ymd").innerHTML = "Date of last change to this page: "+y+"-"+m+"-"+d;
+		document.getElementById("ymd").innerHTML = "Date of last change to this page: "+y+"-"+m+"-"+d+&copy;+y+"Hao Wang";
 	    </script>
             <script type="text/javascript" src="dtxt1.js"></script>
-	    &copy; 2019 Hao Wang
       </center>
       <center> &copy; 2019 Hao Wang </center>
     </div>
