--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <a href="https://github.com/HWANG7308">[GitHub]</a>
                     <a href="https://www.linkedin.com/in/%E7%81%8F-%E7%8E%8B-31a876a2/?locale=en_US">[LinkedIn]</a>
                     <!-- <a href="https://twitter.com/vincesitzmann">[Twitter]</a> -->
-	            <a href="https://hwang7308.github.io/docs/CV-Hao-Wang.pdf">[CV]</a>
+	            <a href="https://hwang7308.github.io/pdfs/CV-Hao-Wang.pdf">[CV]</a>
                   </div>
                 </div>
             </div>
