--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 	    </script>
             <script type="text/javascript" src="dtxt1.js"></script>
       </center>
-      <center> &copy; 2019 Hao Wang </center>
+      <center> Hao Wang &copy; 2019 </center>
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
