--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 
 
     <div id='footer' class='vspace-top'>
-      <center><p id="ymd"></p>
+        <!-- <center><p id="ymd"></p> -->
 	    <script>
 		var date = new Date()<!--获得日期数据-->
 		var y = date.getFullYear();<!--年-->
@@ -263,7 +263,8 @@
 		document.getElementById("ymd").innerHTML = "Date of last change to this page: "+y+"-"+m+"-"+d;
 	    </script>
             <script type="text/javascript" src="dtxt1.js"></script>
-      </center>
+        <!-- </center> -->
+	
       <center> Hao Wang &copy; 2019 </center>
     </div>
 
