--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
                 <div class='row vspace-top'>
                     <div class="col-sm-3">
-                      <img src='imgs/MSc.png' class='img-fluid'>
+                      <img src='dissertation/msc/msc.png' class='img-fluid'>
                     </div>
                     <div class="col">
                         <div class='paper-title'>
@@ -189,7 +189,7 @@
                             Dissertation for Master’s degree
                         </div>
                         <div>
-                            <a href="https://hwang7308.github.io/imgs/msc_abstract.png">[Abstract]</a>
+                            <a href="https://hwang7308.github.io/dissertation/msc/abstract.html">[Abstract]</a>
                             <!-- <a href="https://hwang7308.github.io/imgs/msc_abstract.png">[Abstract]</a> -->
                         </div>
                     </div>
@@ -197,7 +197,7 @@
 
                 <div class='row vspace-top'>
                     <div class="col-sm-3">
-                        <img src='imgs/BEng.png' class='img-fluid'>
+                        <img src='dissertation/beng/beng.png' class='img-fluid'>
                     </div>
                     <div class="col">
                         <div class='paper-title'>
@@ -208,7 +208,7 @@
                         </div>
                         <div>
                             <!-- <a href="https://hwang7308.github.io/imgs/beng_abstract.png">[Abstract]</a> -->
-                            <a href="https://hwang7308.github.io/beng/abstract.html">[Abstract]</a>
+                            <a href="https://hwang7308.github.io/dissertation/beng/abstract.html">[Abstract]</a>
                         </div>
                     </div>
                 </div>
