--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
                 <div class="col">
                     <div id='header-text-name'>
-                        Hao Wang
+                        Hao Wang (王灏)
                     </div>
                     <div id='header-text-status'>
                         Research Intern <br />
@@ -112,7 +112,7 @@
             <div class='col offset-sm-1'>
                 <h1>Bio</h1>
                 <p>
-                    Hi! I am Hao Wang (王灏 in Chinese), currently a research intern at the Center for Biometrics and Security Research & National Laboratory of Pattern Recognition, Institute of Automation of the Chinese Academy of Sciences. My research interests are in 3D Vision and Graphics. <br />
+                    Hi! I am Hao Wang, currently a research intern at the Center for Biometrics and Security Research & National Laboratory of Pattern Recognition, Institute of Automation of the Chinese Academy of Sciences. My research interests are in 3D Vision and Graphics. <br />
                     <br />
                     I have background in signal and image processing, embedded system, machine learning, computer vision, and natural language processing. In 2019, I received my MSc with Distinction in <a href="https://www.ed.ac.uk/files/atoms/files/pgb-informatics-2018.pdf#page=5">Informatics</a> from <a href="https://www.ed.ac.uk/">The University of Edinburgh</a>, supervised by <a href="http://homepages.inf.ed.ac.uk/rbf/">Prof. Bob Fisher</a>. In 2018, I received my B.Eng. in Telecommunication Engineering from <a href="https://www.bupt.edu.cn/">Beijing University of Posts and Telecommunications</a>. <br />
                     <br />
