--- a/index.html
+++ b/index.html
@@ -242,9 +242,13 @@
         </div>
     </div>
 
-    <div id='footer' class='vspace-top'>
+    <!-- <div id='footer' class='vspace-top'>
         <center> Hao Wang &copy; 2019 </center>
-    </div>
+    </div> -->
+
+    <script language=Javascript>
+        document.write("Last Updated: " + document.lastModified + "")
+    </script>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
