modified the display of update time in the footer

--- a/index.html
+++ b/index.html
@@ -246,9 +246,11 @@
         <center> Hao Wang &copy; 2019 </center>
     </div> -->
 
-    <script language=Javascript>
-        document.write("Last Updated: " + document.lastModified + "")
-    </script>
+    <div id='footer' class='vspace-top'>
+        <script language=Javascript>
+            <center> document.write("Last Updated: " + document.lastModified) </center>
+        </script>
+    </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
