modified the display of update time in the footer

--- a/index.html
+++ b/index.html
@@ -247,9 +247,11 @@
     </div> -->
 
     <div id='footer' class='vspace-top'>
-        <script language=Javascript>
-            <center> document.write("Last Updated: " + document.lastModified) </center>
-        </script>
+        <center>
+            <script language=Javascript>
+                document.write("Last Updated: " + document.lastModified)
+            </script>
+        </center>
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
