--- a/index.html
+++ b/index.html
@@ -75,6 +75,33 @@
 </head>
 
 <body>
+    <div id="navbar" class="navbar navbar-fixed-top">
+        <div class="navbar-inner">
+            <div class="container">
+                <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </a>
+                <!--<a class="brand" href="index.html#">Dr. T. Hospedales</a>-->
+                <a class="brand" href="index.html#">Dr. T. Hospedales</a>
+                <div class="nav-collapse">
+                    <ul class="nav">
+                        <li class="active"><a href="#home">Home</a></li>
+                        <!-- <li><a href="#about">About</a></li> -->
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="#publication">Publications</a></li>
+                        <li><a href="#team">Research Group</a>
+                        <li>
+                        <li><a href="downloads.html">Code &amp; Datasets</a></li>
+                        <li><a href="#teaching">Teaching</a></li>
+                    </ul>
+                </div>
+                <!--/.nav-collapse -->
+            </div>
+        </div>
+    </div>
+
     <div id='header'>
         <div class='container'>
             <div class='row'>
