add section id home

--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
         </div>
     </div>
 
-    <div id='header'>
+    <!-- <div id='header'> -->
+    <section id='home'>
         <div class='container'>
             <div class='row'>
                 <div class="col-sm-3 offset-sm-1">
@@ -133,7 +134,8 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
+    <!-- </div> -->
 
     <div class='container'>
         <div class='row vspace-top'>
