--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-inverse" role="navigation">
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand" href="#">菜鸟教程</a>
