--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             /*background-color: #FFFFFF;*/
             display: flex;
             align-items: flex-end;
-            padding-top:60px;
+            padding-top:105px;
             padding-bottom:60px;
         }
         #footer {
@@ -71,17 +71,57 @@
         .paper-authors {
             font-style: italic;
         }
+        /* Add a black background color to the top navigation */
+        .topnav {
+        background-color: #002133;
+        overflow: hidden;
+        position: fixed;
+        width: 100%;
+        z-index: 99999;
+        }
+
+        /* Style the links inside the navigation bar */
+        .topnav a {
+        float: right;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 17px;
+        }
+
+        /* Change the color of links on hover */
+        .topnav a:hover {
+        background-color: #ddd;
+        color: black;
+        }
+
+        /* Add a color to the active/current link */
+        .topnav a.active {
+        background-color: #ddd;
+        color: black;
+        }
     </style>
 </head>
 
 <body>
+    <div class="topnav">
+        <div class='container'>
+            <a href="#about">About</a>
+            <a href="#contact">Contact</a>
+            <a href="#research">Research</a>
+            <!-- <a href="#publications">Publications</a> -->
+            <a href="#news">News</a>
+            <a href="#header">Home</a>
+        </div>
+    </div>
+
     <div id='header'>
         <div class='container'>
             <div class='row'>
                 <div class="col-sm-3 offset-sm-1">
                     <img src='imgs/portrait.jpeg' class='img-fluid' id='portrait'>
                 </div>
-
                 <div class="col">
                     <div id='header-text-name'>
                         Hao Wang (王灏)
@@ -121,8 +161,8 @@
                 </p>
 
                 <!-- List of updates -->
-                <div class='vspace-top'>
-                    <h1>Updates</h1>
+                <div id='news' class='vspace-top'>
+                    <h1>News</h1>
                 </div>
 
                 <div style="overflow:auto; height:180px;">
@@ -172,8 +212,35 @@
                     </div>
                 </div>
 
+                <!-- List of publications -->
+                <!-- <div id='publications' class='vspace-top'>
+                    <h1>Publications</h1>
+                </div>
+
+                <div class='row vspace-top'>
+                    <div class="col-sm-3">
+                        <img src='imgs/SRNs.gif' class='img-fluid'>
+                    </div>
+                    <div class="col">
+                        <div class='paper-title'>
+                            Scene Representation Networks: Continuous 3D-Structure-Aware Neural Scene Representations
+                        </div>
+                        <div class='paper-desc'>
+                            NeurIPS 2019 (Oral, <b>Honorable Mention "Outstanding New Directions"</b>)
+                        </div>
+                        <div class='paper-authors'>
+                            <u>Vincent Sitzmann</u>, Michael Zollhöfer, Gordon Wetzstein
+                        </div>
+                        <div>
+                            <a href="http://vsitzmann.github.io/srns/">[Project page]</a>
+                            <a href="http://arxiv.org/abs/1906.01618">[Preprint]</a>
+                            <a href="https://github.com/vsitzmann/scene-representation-networks">[Code]</a>
+                        </div>
+                    </div>
+                </div> -->
+
                 <!-- List of research projects -->
-                <div class='vspace-top'>
+                <div id='research' class='vspace-top'>
                     <h1>Research Highlights</h1>
                 </div>
 
@@ -211,34 +278,13 @@
                     </div>
                 </div>
 
-                <!-- List of publications -->
-                <!--<div class='vspace-top'>
-                    <h1>Publications</h1>
+                <!-- List of contact information -->
+                <div id='contact' class='vspace-top'>
+                    <h1>Contacts</h1>
                 </div>
-                -->
-                <!--
-                <div class='row vspace-top'>
-                    <div class="col-sm-3">
-                        <img src='imgs/SRNs.gif' class='img-fluid'>
-                    </div>
-                    <div class="col">
-                        <div class='paper-title'>
-                            Scene Representation Networks: Continuous 3D-Structure-Aware Neural Scene Representations
-                        </div>
-                        <div class='paper-desc'>
-                            NeurIPS 2019 (Oral, <b>Honorable Mention "Outstanding New Directions"</b>)
-                        </div>
-                        <div class='paper-authors'>
-                            <u>Vincent Sitzmann</u>, Michael Zollhöfer, Gordon Wetzstein
-                        </div>
-                        <div>
-                            <a href="http://vsitzmann.github.io/srns/">[Project page]</a>
-                            <a href="http://arxiv.org/abs/1906.01618">[Preprint]</a>
-                            <a href="https://github.com/vsitzmann/scene-representation-networks">[Code]</a>
-                        </div>
-                    </div>
-                </div>
-                -->
+                <p>
+                    Feel free to get in touch! You can <a href="jackw7308@gmail.com">email</a> me.
+                </p>
             </div>
         </div>
     </div>
