--- a/index.html
+++ b/index.html
@@ -280,10 +280,12 @@
 
                 <!-- List of contact information -->
                 <div id='contact' class='vspace-top'>
-                    <h1>Contacts</h1>
+                    <h1>Contact</h1>
                 </div>
                 <p>
-                    Feel free to get in touch! You can <a href="jackw7308@gmail.com">email</a> me.
+                    Feel free to get in touch!<br />
+                    <br />
+                    You can <a href="jackw7308@gmail.com">email</a> me, or through <a href="#header">the other ways</a> listed above.
                 </p>
             </div>
         </div>
