--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             font-size: 20px;
         }
         .vspace-top {
+            /* padding-top: 30px; */
             margin-top: 30px;
         }
         .vspace-top-news {
